--- a/css/styles.css
+++ b/css/styles.css
@@ -1,106 +1,168 @@
-body {
-  padding: 0;
-  margin: 0;
+:root {
+  --primiry-color-navy: #2e2f42;
+  --secondary-text-color: #434455;
+  --specialy-color: #4d5ae5;
+  --hover-color: #404bbf;
 }
 
-.logo-link {
-  width: 71px;
-  height: 21px;
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 21px;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #2e2f42;
+.list {
+  list-style: none;
+}
+
+.link {
   text-decoration: none;
 }
 
-.logo {
-  font-family: "Raleway";
-  width: 44px;
-  height: 21px;
-  font-style: normal;
+body {
+  font-family: "Roboto", sans-serif;
+}
+/* ==================COMPONENTS================== */
+.page-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--primiry-color-navy);
+}
+.logo-link {
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   display: flex;
   align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+}
+.logo-text {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--specialy-color);
+}
+.header-logo {
+  color: var(--primiry-color);
+}
+.footer-logo {
+  color: #f4f4fd;
 }
 
-.navigation {
-  width: 48px;
-  height: 24px;
-  font-family: "Roboto";
-  font-style: normal;
+/* ==================/COMPONENTS================== */
+
+/* ==================HEADER================== */
+
+.menu-link {
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  text-decoration: none;
 }
-
-.button-text {
-  width: 105px;
-  height: 24px;
-  font-family: "Roboto";
+.menu-link:hover,
+.menu-link:focus {
+  color: var(--hover-color);
+}
+.contact-link {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.04em;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+.contact-link:hover,
+.contact-link:focus {
+  color: var(--hover-color);
+}
+/* ==================/HEADER================== */
+/* ==================HERO================== */
+.main-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
   color: #ffffff;
 }
-
 .button {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   padding: 16px 32px;
   gap: 10px;
-  position: absolute;
-  width: 169px;
-  height: 56px; /*  */
-  left: 636px;
-  top: 428px;
-  background: #4d5ae5;
+  background: var(--specialy-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  cursor: pointer;
 }
-
+.button:hover,
+.button:focus {
+  background: var(--specialy-color);
+}
+.button:active {
+  background: var(--hover-color);
+}
+.button-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+/* ==================/HERO================== */
+/* ==================FEATURES================== */
 .features-title {
-  width: 264px;
-  height: 24px;
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--primiry-color-navy);
 }
-
-.features {
-  list-style: none;
-}
-
 .features-text {
-  width: 264px;
-  height: 72px;
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--secondary-text-color);
 }
+/* ==================/FEATURES================== */
+/* ==================ABOUT US================== */
+
+/* ==================/ABOUT US================== */
+/* ==================OUR TEAM================== */
+.team-cards-name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--primiry-color-navy);
+}
+.team-cards-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+/* ==================/OUR TEAM================== */
+
+/* ==================FOOTER================== */
+.footer-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+/* ==================/FOOTER================== */
