--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   --secondary-text-color: #434455;
   --specialy-color: #4d5ae5;
   --hover-color: #404bbf;
+  --color-on-blue-theme: #ffffff;
+  --background-color: #f4f4fd;
 }
 
 .list {
@@ -48,10 +50,10 @@ body {
   color: var(--specialy-color);
 }
 .header-logo {
-  color: var(--primiry-color);
+  color: var(--primiry-color-navy);
 }
 .footer-logo {
-  color: #f4f4fd;
+  color: var(--background-color);
 }
 
 /* ==================/COMPONENTS================== */
@@ -63,7 +65,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--primiry-color-navy);
 }
 .menu-link:hover,
 .menu-link:focus {
@@ -82,6 +84,7 @@ body {
   color: var(--hover-color);
 }
 /* ==================/HEADER================== */
+
 /* ==================HERO================== */
 .main-title {
   font-weight: 700;
@@ -89,34 +92,24 @@ body {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--color-on-blue-theme);
 }
 .button {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 16px 32px;
-  gap: 10px;
   background: var(--specialy-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  color: var(--color-on-blue-theme);
   cursor: pointer;
-}
-.button:hover,
-.button:focus {
-  background: var(--specialy-color);
-}
-.button:active {
-  background: var(--hover-color);
-}
-.button-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
+}
+.button:hover,
+.button:focus {
+  background: var(--hover-color);
 }
 /* ==================/HERO================== */
 /* ==================FEATURES================== */
@@ -163,6 +156,44 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: var(--background-color);
 }
 /* ==================/FOOTER================== */
+
+/* ==================PORTFOLIO================== */
+.nav-buttons-form {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  background: var(--background-color);
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  cursor: pointer;
+  color: var(--specialy-color);
+}
+.nav-buttons-form:hover,
+.nav-buttons-form:focus {
+  background: var(--hover-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: var(--color-on-blue-theme);
+}
+.image-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primiry-color-navy);
+}
+.image-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+/* ==================/PORTFOLIO================== */
